# ipyfoo

./: .gitignore  README.md  jupyter-ipyfoo.json  setup.cfg
ipyfoo/: __init__.py  widget.py
ipyfoo/nbextension/: extension.js  index.js
