[metadata]
name = ipyfoo
author = Trevor Manz
author_email = trevor.j.manz@gmail.com
license = MIT
description = A bare bones Jupyter widget
url = https://github.com/manzt/minimal-jupyter-widget
long_description = file: README.md
long_description_content_type = text/markdown

[options]
include_package_data = True
packages = find:
setup_requires = setuptools_scm
install_requires = ipywidgets
python_requires = >=3.7

[options.package_data]
* = nbextension/* # important! makes sure our js gets checked-in
